# projecteuler

./: p078.lpy  p078.py  p084.lpy  p084.py  pyproject.toml  template.lpy
001_050/: p001_multiples_of_3_or_5.lpy  p002_even_fibonacci_numbers.lpy  p003_largest_prime_factor.lpy  p004_largest_palindrome_product.lpy  p005_smallest_multiple.lpy  p006_sum_square_difference.lpy  p007_10001st_prime.lpy  p008_largest_product_in_a_series.lpy  p009_special_pythagorean_triplet.lpy  p010_summation_of_primes.lpy  p011_largest_product_in_a_grid.lpy  p012_highly_divisible_triangular_number.lpy  p013_large_sum.lpy  p014_longest_collatz_sequence.lpy  p015_lattice_paths.lpy  p016_power_digit_sum.lpy  p017_nuimber_letter_counts.lpy  p018_maximum_path_sum_1.lpy  p019_counting_sundays.lpy  p020_factorial_digit_sum.lpy  p021_amicable_numbers.lpy  p022_names_scores.lpy  p023_non-abundant_sums.lpy  p024_lexicographic_permutations.lpy  p025_1000-digit_fibonacci_number.lpy  p026_reciprocal_cycles.lpy  p027_quadratic_primes.lpy  p028_number_spiral_diagonals.lpy  p029_distinct_powers.lpy  p030_digit_fifth_powers.lpy  p031_coin_sums.lpy  p032_pandigital_products.lpy  p033_digit_cancelling_fractions.lpy  p034_digit_factorials.lpy  p035_circular_primes.lpy  p036_double-base_palindromes.lpy  p037_truncatable_primes.lpy  p038_pandigital_multiples.lpy  p039_integer_right_triangles.lpy  p040_champernownes_constant.lpy  (+10 more)
051_100/: hy2lpy.lpy  p051_prime_digit_replacements.lpy  p052_permuted_multiples.lpy  p053_combinatoric_selections.lpy  p054_poker_hands.lpy  p055_lychrel_numbers.lpy  p058_spiral_primes.lpy  (+30 more)
